# gim

cache_group/: CMakeCache.txt  CMakeLists.txt  build.sh  redis_client.cpp  redis_client.h  sess_cache.cpp  sess_cache.h  svlist_cache.cpp  svlist_cache.h
cache_group/include/: cache_group.h  gtype.h  mb_adaptor.h  message.pb.h  redis_client.h
cache_group/src/: log_init.cpp  redis_cg.cpp  redis_client.cpp  redis_mb.cpp
cache_group/test/msgboxtest/: CMakeLists.txt
cache_group/test/redisclitest/: CMakeLists.txt  redis_cli_test.cpp
call_push_test/: CMakeLists.txt  build.sh  call_push_test.cpp
clientdemo/: .project  AndroidManifest.xml
clientdemo/jni/: Android.mk  Application.mk  config.h
clientdemo/jni/android/: androidclient.cpp  androidclient.h  client_jni.cpp  client_jni.h
clientdemo/jni/client_sdk/: cli_test.cpp  client.cpp  client.h  client_conn.cpp  client_conn.h  client_def.h  client_log.h  err_no.h  eventloop.cpp  eventloop.h  logic_common.cpp  logic_common.h  msg_head.h  opbase.cpp  opbase.h  ops.cpp  ops.h  service_type.h  srv_test.cpp
clientdemo/jni/common/: ef_aes.cpp  ef_aes.h  ef_auto_ptr.h  ef_base64.cpp  ef_base64.h  ef_btype.h  ef_hex.h  (+14 more)
common/: CMakeLists.txt  build.sh
common/base/: ef_loop_buf.cpp  ef_loop_buf.h  ef_md5.cpp  ef_md5.h  ef_statistic.cpp  ef_statistic.h  ef_thread.h  rijndael-api-fst.cpp
common/include/: cache_group.h  dynamic_tokenchk.h  mb_adaptor.h  msg_db.h  msg_interface.h  redis_cg.h  redis_client.h  redis_mb.h  redis_msg_q.h  server_status.h  sess_cache.h  session.pb.h  svlist_cache.h  token_checker.h  tree.h  user_db.h  zk_client.h  zk_config.h  zk_server_node.h  zk_server_ob.h  zk_watcher.h
common/net/: ef_client.h  ef_common.h  ef_connection.cpp  ef_connection.h  ef_event_loop.cpp  ef_event_loop.h  ef_net_log.cpp  ef_operator.cpp  ef_operator.h  ef_sock.cpp  ef_sock.h
common/src/: cache_group.cpp  def_cache_group.cpp  def_cache_group.h  def_sess_cache.cpp  def_sess_cache.h  def_sess_cache_group.cpp  def_sess_cache_group.h  def_svlist_cache.cpp  def_svlist_cache.h  def_user_db.cpp  def_user_db.h  dynamic_tokenchk.cpp  ef_crypt.cpp  message.pb.cpp  msg_db.cpp  redis_cg.cpp  redis_cg.h  redis_client.cpp  redis_client.h  redis_mb.cpp  redis_mb.h  redis_msg_db.cpp  redis_msg_db.h  redis_msg_interface.cpp  redis_msg_interface.h  redis_msg_q.cpp  redis_msgdb.cpp  redis_msgdb.h  server_status.cpp  sess_cache.cpp  session.pb.cpp  svlist_cache.cpp  token_checker.cpp  user_db.cpp  zk_client.cpp  zk_config.cpp  zk_server_node.cpp  zk_server_ob.cpp  zk_watcher.cpp
common/test/logtest/: CMakeLists.txt  build.sh  elog_test.cpp
common/test/msgboxtest/: CMakeLists.txt  build.sh  msgboxtest.cpp  test.conf
common/test/redisclitest/: CMakeLists.txt  redis_cli_test.cpp
common/test/sess_cache_test/: CMakeLists.txt  build.sh  log.conf  sess_cache_test.cpp
common/test/sesstest/: CMakeLists.txt  sess.conf  sess_test.cpp
common/test/svlsttest/: CMakeLists.txt  svlist.conf  svlst_test.cpp
common/test/zk_client_test/: CMakeLists.txt  build.sh  test.cpp
common_test/: CMakeLists.txt  build.sh
common_test/src/: main.cpp
connect_server/: CMakeLists.txt  build.sh
connect_server/etc/: elog.conf  settings.conf  settings.conf_test  settings.conf_unit_test
connect_server/src/: base_conn.h  cache_conn.cpp  cache_conn.h  client_config.h  client_conn.cpp  client_conn.h  common.cpp  common.h  connect_server.cpp  connect_server.h  main.cpp  server_config.h  server_conn.cpp  server_conn.h  server_manager.cpp  server_manager.h  settings.cpp  settings.h  type_map.cpp  type_map.h
connect_server/src/proto/: connect_server.pb.cpp  connect_server.pb.h  err_no.h  position_server.proto  session.proto
connect_server/test_client/: CMakeLists.txt  build.sh
connect_server/test_client/src/: test.cpp
connect_server/test_client/src/proto/: message.pb.cpp  message.pb.h  pair.pb.cpp  pair.proto  peer_server.pb.cpp  peer_server.pb.h  peer_server.proto  position_server.proto
connect_server/test_server/: CMakeLists.txt  build.sh
connect_server/test_server/src/: test.cpp
connect_server/test_server/src/proto/: pair.pb.h
dispatch_server/: CMakeLists.txt  build.sh
dispatch_server/etc/: ds.conf  elog.conf  settings.conf
dispatch_server/src/: client_conn.cpp  client_conn.h  common.cpp  common.h  config.h  consv_config.h  dispatch_server.cpp  dispatch_server.h  main.cpp
dispatch_server/test/: CMakeLists.txt  build.sh
dispatch_server/test/src/: main.cpp  message.proto
dispatch_server/test/src/proto/: connect_server.pb.cpp  connect_server.pb.h  msg_head.h  pair.pb.h
doc/: GIM编码规范.doc  架构设计.doc
efnfw/: CMakeLists.txt  build.sh
efnfw/base/: ef_aes.cpp  ef_log.cpp  ef_log.h  ef_loop_buf.cpp  ef_loop_buf.h  ef_statistic.cpp  ef_thread.cpp  ef_thread_pool.cpp  ef_utility.cpp  ef_utility.h
efnfw/net/: ef_client.cpp  ef_connection.cpp  ef_connection.h  ef_device.cpp  ef_event_loop.cpp  ef_event_loop.h  ef_net_log.cpp  ef_net_log.h  ef_server.cpp  ef_server.h  ef_sock.cpp  ef_sock.h  ef_timer.cpp  ef_timer.h
logic_server/: CMakeLists.txt  build.sh  dispatcher.cpp  dispatcher.h  logic_common.cpp  logic_common.h  logic_conn.cpp  logic_conn.h  logic_server.cpp  logic_server.h  rpc_client.cpp  rpc_client.h  server_conn.cpp  server_conn.h
logic_test/: CMakeLists.txt  build.sh
logic_test/etc/: elog.conf
logic_test/src/: main.cpp  test_conn.cpp  test_conn.h
peer_server/: CMakeLists.txt  build.sh
peer_server/etc/: elog.conf  settings.conf  settings.conf_test
peer_server/push_test/: CMakeLists.txt  build.sh
peer_server/push_test/src/: test.cpp
peer_server/src/: db_conn.cpp  db_conn.h  main.cpp  peer_cmd.h  peer_conn.cpp  peer_conn.h  push_conn.cpp  push_conn.h  settings.cpp  settings.h
proto/: connect_server.proto  err_no.h  message.proto  msg_head.h  session.proto
push_server/: CMakeLists.txt  build.sh  run.sh
push_server/etc/: elog.conf
push_server/src/: main.cpp  push_client_conn.cpp  push_client_conn.h  push_common.cpp  push_common.h  push_def.h  push_msg_db.cpp  push_msg_db.h  push_server_conn.cpp  push_server_conn.h
(+27 files in other folders)
