project(cachegroup)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -g")
include_directories(${PROJECT_SOURCE_DIR}/../common)
link_directories(../../common/lib /usr/lib/hiredis)
set(LIBRARY_OUTPUT_PATH lib)
link_libraries( pthread hiredis config)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
add_library(cachegroup STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(cachegroup PROPERTIES LINKER_LANGUAGE C)
