project(ConnectServer)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g")
include_directories(${PROJECT_SOURCE_DIR}/../common/include ${PROJECT_SOURCE_DIR}/../efnfw)
link_directories(/usr/local/lib ../common/lib/ ../efnfw/lib) 
link_libraries(libcommon.a libefnfw.a hiredis protobuf json pthread)
file(GLOB_RECURSE SRC_LIST src/*.cpp)
add_executable(bin/ConnectServer ${SRC_LIST})
