cmake_minimum_required(VERSION 2.6)
project(logic_server)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g")
include_directories(../common/include ../efnfw)
link_directories(/usr/local/lib ../common/lib/ ../efnfw/lib) 
link_libraries(libcommon.a libefnfw.a hiredis
protobuf json pthread)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
add_library(logic_server STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(logic_server PROPERTIES LINKER_LANGUAGE C)
