cmake_minimum_required(VERSION 2.6)
project(elog_test)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(SRC_LIST  elog_test.cpp)
include_directories(../../include ../../../efnfw)
add_definitions("-Wall -g")
link_directories(../../lib)
link_directories(../../../efnfw/lib)
link_libraries(libcommon.a json libefnfw.a pthread config)
add_executable(elog_test ${SRC_LIST})
